# pixel-art-converter

./: Cargo.toml  README.md  build.gradle.kts  fix_all.py  fix_rotate.py  fix_warnings2.py  patch_main_activity.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
crates/android-lib/: Cargo.toml
crates/android-lib/src/: lib.rs
crates/aseprite-converter/: Cargo.toml
crates/aseprite-converter/src/: lib.rs  reader.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration_test.rs
crates/cli/tests/data/: synthetic.psp
crates/pixaki-v2/: Cargo.toml
crates/pixaki-v2-converter/: Cargo.toml
crates/pixaki-v2-converter/src/: lib.rs
crates/pixaki-v2/src/: lib.rs
crates/pixaki-v3/: Cargo.toml
crates/pixaki-v3-converter/: Cargo.toml
crates/pixaki-v3-converter/src/: lib.rs
crates/pixaki-v3/src/: lib.rs
crates/pixel-art/: Cargo.toml
crates/pixel-art/src/: lib.rs
crates/pixel-studio-pro-v2-converter/src/: lib.rs
crates/pixel-studio-pro-v2/src/: lib.rs
crates/psd-converter/: Cargo.toml
crates/psd-converter/src/: lib.rs
crates/psp-timelapse/: Cargo.toml
crates/psp-timelapse/src/: lib.rs
docs/specs/pixaki/v2/: README.md  document.md  frame.md  layer.md  symbol.md
docs/specs/pixaki/v3/: README.md  cel.md  document.md  layer.md  sprite.md
docs/specs/pixel-studio-pro/v2/: README.md  clip.md  document.md  frame.md  history.md  layer-group.md  layer.md  tools.md
scripts/: convert_all.py  move_all.py
src/: lib.rs  main.rs  pixaki.rs
tests/: integration_test.rs
(+27 files in other folders)
