[package]
name = "android-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "pixelartconvert_android"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
pixel-art = { path = "../pixel-art", features = ["image"] }
pixaki-v2 = { path = "../pixaki-v2" }
pixaki-v3 = { path = "../pixaki-v3" }
pixaki-v2-converter = { path = "../pixaki-v2-converter" }
pixaki-v3-converter = { path = "../pixaki-v3-converter" }
pixel-studio-pro-v2 = { path = "../pixel-studio-pro-v2" }
pixel-studio-pro-v2-converter = { path = "../pixel-studio-pro-v2-converter" }
aseprite-converter = { path = "../aseprite-converter" }
serde_json = "1.0"
plist = "1.6"
anyhow = "1.0"
aseprite-io = { version = "0.1" }
base64 = "0.22.1"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
psd = { git = "https://github.com/tswast/psd.git" }
psd-converter = { version = "0.1.0", path = "../psd-converter" }
